feature/remove-nfce-references-from-view

--- a/src/GeradorDanfe.App/Views/Home/Index.cshtml
+++ b/src/GeradorDanfe.App/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                        accept=".xml"
                        required />
                 <div class="form-text">
-                    O sistema identifica automaticamente NF-e (55)
+                    Informe o XML de uma NF-e (modelo 55)
                 </div>
             </div>
 
