Add ads.txt for AdSense verification

--- a/src/GeradorDanfe.App/Views/Shared/_Layout.cshtml
+++ b/src/GeradorDanfe.App/Views/Shared/_Layout.cshtml
@@ -37,6 +37,16 @@
 							</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" asp-controller="Home" asp-action="About">
+								Sobre
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" asp-controller="Home" asp-action="Contact">
+								Contato
+							</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" asp-controller="Home" asp-action="Privacy">
 								Política de Privacidade
 							</a>
