--- a/src/GeradorDanfe.App/Views/Shared/_Layout.cshtml
+++ b/src/GeradorDanfe.App/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow">
 	<link rel="canonical" href="https://getdanfe.cloudtas.com.br/" />
+	<!-- Add-Sense -->
+	<meta name="google-adsense-account" content="ca-pub-3334351416283623">
 	<!-- Open Graph -->
 	<meta property="og:title" content="Converter XML de NFe para DANFE Online">
 	<meta property="og:description" content="Envie o XML da NF-e e gere o DANFE em PDF automaticamente.">
@@ -37,17 +39,17 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" asp-controller="Home" asp-action="About">
+							<a class="nav-link" asp-controller="About" asp-action="Index">
 								Sobre
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" asp-controller="Home" asp-action="Contact">
+							<a class="nav-link" asp-controller="Contact" asp-action="Index">
 								Contato
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" asp-controller="Home" asp-action="Privacy">
+							<a class="nav-link" asp-controller="PrivacyPolicy" asp-action="Index">
 								Política de Privacidade
 							</a>
 						</li>
