--- a/src/GeradorDanfe.App/Views/Home/Index.cshtml
+++ b/src/GeradorDanfe.App/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 
     <!-- CARD PRINCIPAL -->
     <section class="container d-flex justify-content-center">
-        <div class="card main-card p-4" style="width:100%; max-width:520px;">
+        <div class="card main-card card-width-large p-4">
 
             @if (TempData["Error"] != null)
             {
