--- a/src/GeradorDanfe.App/Views/Shared/_Layout.cshtml
+++ b/src/GeradorDanfe.App/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" asp-controller="PrivacyPolicy" asp-action="Index">
+							<a class="nav-link" asp-controller="Privacy" asp-action="Index">
 								Política de Privacidade
 							</a>
 						</li>
@@ -67,7 +67,7 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container">
-			&copy; 2026 - GetDanfe - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a>
+			&copy; 2026 - GetDanfe - <a asp-area="" asp-controller="Privacy" asp-action="Index">Política de Privacidade</a>
 		</div>
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
