feature/add-tag-script-ad-sense

--- a/src/GeradorDanfe.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeradorDanfe.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 	<link rel="canonical" href="https://getdanfe.cloudtas.com.br/" />
 	<!-- Add-Sense -->
 	<meta name="google-adsense-account" content="ca-pub-3334351416283623">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3334351416283623" crossorigin="anonymous"></script>
 	<!-- Open Graph -->
 	<meta property="og:title" content="Converter XML de NFe para DANFE Online">
 	<meta property="og:description" content="Envie o XML da NF-e e gere o DANFE em PDF automaticamente.">
